- basic LP distribute of extra.nw for oas.nw, olk.nw, and occ.nw

** internals
- use uppercase module filenames, split Main.ml/CLI.ml, and start
  to use capabilities for 5a/5c/5l/cpp as well as lex/yacc
- use Cap.open_out, started new Cap.draw, Cap.keyboard, Cap.mouse
  and Cap.mount, Cap.bind for orio
- forbid Sys.remove and use Cap.open_out and FS.remove instead
- use more Chan.{i,o} types to reduce the need for Cap.open_{in,out}
- resume the compilation of windows/ and kernel/ with dune and mkfile
  without requiring a plan9 ocamlc


* 0.16 (Q3 2025) (Dockerfile.light v0)

** testinfra
- Finish Dockerfile.light that can compile {mk,rc,lib_core/commons} with
  ocaml-light! see ocaml-light/changes.txt for all the stuff that was needed

* 0.15 (Q2 2025) (Cap.ml, Dockerfile/Nix/Testo (testinfra), dune/merlin (tools))
# Resume again after one year of inactivity due to my work on Semgrep.
# Bring again like last year good stuff I learned from Semgrep:
#  - Cap.ml! capabilities!! XiX can innovate not only on being far smaller, and
#    also have literate documents, but also because it uses capabilities in apps!
#  - Console.ml, Chan.ml (and UConsole.ml/UChan.ml)
#  - Dockerfile (and GHA) for reproducible tangible build instructions
#  - Nix (and GHA) for another reproducible tangible build instructions
#    and even cross-platform CI checks for Linux and macOS
#  - ppx_deriving (instead of ocamltarzan and OCaml.ml)
#  - Fpath.t (instead of Common.filename)
#  - dune (and good ocaml warnings and also far faster build time in //)
#  - merlin for code navigation (requires dune)
#  - Testo (snapshot-based testing)
#  (remain ocamlformat and let* that I learned at Semgrep but maybe less important)

** internals

- Start use ppx_deriving (which then require OCaml 4.09.1 but
  it should be doable to implement a poor's man deriving in ocaml-light)
  We generate some dummy show_xxx so that boostrap-mk.sh can still